# bonnyci-test-suite

./: .gitignore  .testr.conf  README.rst  bonnyci_test.conf.example  requirements.py  setup.cfg  test-requirements.txt  test_config.conf.example  tox.ini
.bonnyci/: run.sh
bonnyci_test/: editor.py  git_manager.py  github.py  utils.py  waiter.py
bonnyci_test/tests/: base.py  test_pull_requests.py
tests/unit/: test_editor.py
tools/ansible/: bonnyci_test.conf  run-tests.yml
