[metadata]
name = bonnyci-test
summary = Test and validate a running BonnyCI environment
description-file =
    README.rst
author = Adam Gandelman
author-email = adam.gandelman@ibm.com
home-page = https://github.com/BonnyCI/bonnyci-test
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    bonnyci_test
